cmake_minimum_required(VERSION 3.21)
project(AdventOfCode2021)

set(CMAKE_CXX_STANDARD 17)

add_executable(AdventOfCode2021 main.cpp day1.cpp day1.h day2.cpp day2.h reader.cpp reader.h util.cpp util.h day3.cpp day3.h test.cpp test.h types.h day4.cpp day4.h day5.cpp day5.h day6.cpp day6.h day7.cpp day7.h day8.cpp day8.h)